now the stream search can display memes as well. The first page of the stream search fonts are fixed where they were too large before. the welcome screen progress bars for scores of completion have their widths match that of the buttons to look more uniform. for stream search there are still some changes to make some minor but some larger like the rate of looking for new faces should have a pause

--- a/AppCode/taga-CSS/stream-search-CSS/stream-search-main-ui.css
+++ b/AppCode/taga-CSS/stream-search-CSS/stream-search-main-ui.css
@@ -15,7 +15,7 @@
 }
 
 .form-label {
-  font-size: clamp(0.75rem, 3.5vmin, 4rem);
+  font-size: clamp(0.75rem, 2.5vmin, 3rem);
 }
 
 #start-btn,
@@ -23,7 +23,7 @@
 #stream-type-description,
 #search-type,
 #source-type {
-  font-size: 3vmin;
+  font-size: 2vmin;
 }
 
 /* ------------------------- */
@@ -36,6 +36,7 @@
   height: 100vh;
   width: 100vw;
   box-sizing: border-box;
+  font-size: clamp(0.75rem, 2vmin, 3rem);
 }
 
 .grid-keywords {
@@ -52,6 +53,13 @@
     'keyword-display-div stream-view-video images-display-div';
 }
 
+.grid-keywords-images-memes {
+  grid-template-columns: 3fr 13fr 3fr 3fr;
+  grid-template-areas:
+    'stream-btns-div stream-btns-div stream-btns-div stream-btns-div'
+    'keyword-display-div stream-view-video images-display-div memes-display-div';
+}
+
 #stream-btns-div {
   grid-area: stream-btns-div;
   display: flex;
@@ -63,7 +71,7 @@
   grid-area: keyword-display-div;
   height: 100%;
   width: 100%;
-  font-size: 3vmin;
+
   overflow-y: auto;
   overflow-x: hidden;
   word-break: break-all;
@@ -87,6 +95,14 @@
   display: none;
 }
 
+#memes-display-div {
+  grid-area: memes-display-div;
+  overflow-y: auto;
+  overflow-x: hidden;
+  border-left: 3px solid var(--primary);
+  display: none;
+}
+
 #canvas-stream {
   display: block;
   width: 100%;
@@ -94,7 +110,7 @@
 }
 
 /*START: CSS for the first stream selection view3 which includes keywords and images */
-#stream-view3 {
+/* #stream-view3 {
   display: grid;
   grid-template-columns: 2fr 13fr 3fr;
   grid-template-rows: 1fr 7fr 7fr;
@@ -137,7 +153,7 @@
   overflow-y: auto;
   overflow-x: hidden;
   border-left: 3px solid var(--primary);
-}
+} */
 
 .top-btns {
   height: 100%;
@@ -147,8 +163,9 @@
 .keyword {
   word-break: break-word; /* Ensures long words do not overflow */
   hyphens: auto; /* Automatically adds hyphens where appropriate */
-  margin-bottom: 0.2rem;
-  font-size: clamp(0.5rem, 3vmin, 2.5rem);
+  margin: 0;
+  padding: 0;
+  font-size: clamp(0.5rem, 2.5vmin, 2.5rem);
 }
 
 .image-thumbnail-div,
